[package]
name = "xkcd_sync"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.82"
clap = { version = "4.5", features = ["derive"] }
crossterm = "0.28"
serde = { version = "1.0.198", features = ["derive"] }
serde_json = "1.0.116"
threadpool = "1.8.1"
ureq = "2.9.6"
